Add configured structure jsons and placed feature jsons, reimplement adding structures to dimensions, enable terraforming